2007-08-17  Paul Eggert  <eggert@cs.ucla.edu>

	* bootstrap: Import from gnulib.

2007-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	* src/diff.c (compare_files): Use last_component rather than base_name,
	adjusting to gnulib API change.  This avoids a memory leak.
	* src/sdiff.c (expand_name): Likewise.
	* src/util.c (dir_file_pathname): Likewise.

	* doc/diff.texi (Copying This Manual): Adjust to new fdl.texi layout.

2007-07-19  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/diff.texi (White Space): Note that newline always ends a line,
	so -w doesn't ignore newline-related changes.  Problem reported by
	David Kastrup.

	* COPYING: New file.
	* AUTHORS: Update from GPLv2 to GPLv3.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* README: Likewise.
	* README-hacking: Likewise.
	* bootstrap: Likewise.
	* bootstrap.conf: Likewise.
	* configure.ac: Likewise.
	* exgettext: Likewise.
	* doc/Makefile.am: Likewise.
	* lib/Makefile.am: Likewise.
	* lib/cmpbuf.c: Likewise.
	* lib/cmpbuf.h: Likewise.
	* lib/prepargs.c: Likewise.
	* m4/vararrays.m4: Likewise.
	* man/Makefile.am: Likewise.
	* ms/Makefile.am: Likewise.
	* ms/README: Likewise.
	* ms/config.bat: Likewise.
	* ms/config.sed: Likewise.
	* ms/config.site: Likewise.
	* po/POTFILES.in: Likewise.
	* src/Makefile.am: Likewise.
	* src/analyze.c: Likewise.
	* src/cmp.c: Likewise.
	* src/context.c: Likewise.
	* src/diff.c: Likewise.
	* src/diff.h: Likewise.
	* src/diff3.c: Likewise.
	* src/dir.c: Likewise.
	* src/ed.c: Likewise.
	* src/io.c: Likewise.
	* src/normal.c: Likewise.
	* src/sdiff.c: Likewise.
	* src/system.h: Likewise.
	* src/util.c: Likewise.

	* src/ifdef.c: Fix typo: "GNU DIFF General Public License" should be
	"GNU General Public License".  Reported by Erich Guenther.
	* src/side.c: Likewise.

2007-06-18  Paul Eggert  <eggert@cs.ucla.edu>

	* bootstrap.conf (gnulib_modules): Add inttypes.
	* src/context.c (print_context_label): Don't assume that time_t
	fits in long int, since it doesn't in FreeBSD/arm.  Problem