@@ -18,7 +18,7 @@
 
 # gnulib modules used by this package.
 gnulib_modules='
-	c-stack config-h dirname dup2 error exclude exit exitfail
+	c-stack config-h diffseq dirname dup2 error exclude exit exitfail
 	extensions fcntl fdl file-type fnmatch-gnu getopt gettext
 	gettime hard-locale inttostr inttypes mkstemp regex sh-quote
 	stat-macros stat-time strcase strftime strtoumax unistd
